Added weather icons and function to update each

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,7 @@ h3 #time-now {
 }
 button {
   width: 150px;
+  text-align: left;
 }
 .card.bg-card-left {
   background-color: rgba(216, 178, 190, 0.4);
